assets/css/style.css
 body {
     background-image: url("/assets/images/concrete_seamless.jpg");
     background-repeat: repeat; 
    }

.topnav {
    background-color: white;
    border-bottom: 2px solid #ccc;
    overflow: hidden;
    width: 100%;
    position: fixed;
    top: 0;
    left: 0;
    margin-bottom: 0;
    z-index:3;
}

.headerContent {
    width: 960px;
    margin: auto;
}

h1 {
    float: left;
    margin-left: 0px;
    background: #4aaaa5;
    padding: 20px;
    color: white;
    margin-bottom: 0px;
    margin-top: 0px;

}

.topnav a {
  float: left;
  color: #777777;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
  margin-top: 0px;
  margin-bottom: 0px;
  font-family: Arial, Helvetica, sans-serif;
}

.topnav a:hover {
  color: #c7c7c7;
}

.topnav a.active {
  color: #a1a1a1;
}

.topnav-right {
  float: right;
  margin-top: 15px;
  margin-bottom: auto;
  color: #777;
}

.contentBox {
    margin: 120px auto 100px auto;
    width: 908px;
    border: 1px solid #ddd;
    background: white;
    padding: 15px 25px 25px 25px;
    color: #777;
    font-family: Arial, Helvetica, sans-serif;
    line-height: 2;
    font-size: 14pt;
    z-index: 1;
}

h2 {
    color: #4aaaa5;
    font-family: Georgia, 'Times New Roman', Times, serif;
    font-size: 20pt;
    margin-top: 0px;
}

#floatedImg {
    float: left;
    margin: 15px 25px 0px 0px;
    border: 1px solid #ccc;
    height: 272px;
}

img {
    width: 272px;
    height: 272px;
}

img.portfolioImage {
    width: 100%;
}

hr {
    border: 1.5px solid #e4e4e4;
}

.footerBar {
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 50px;
    background: #666;
    border-top: #4aaaa5 8px solid;
    text-align: center;
    color: #d3d3d3;
    font-size: 8pt;
    font-family: Arial, Helvetica, sans-serif;
}

#footerContent {
    margin-top: 30px;
}

.projectsContainer {
    margin-top: 30px;
    width: 70%;
}

.projectLink {
    position: relative;
    text-align: center;
    color: white;
    width: 250px;
    height: 170px;
    margin: 10px;
}

.projectImage {
    width: 100%;
    height: 100%;
}

.projectTitle {
    width: 100%;
    font-family: Georgia, 'Times New Roman', Times, serif;
    font-size: 12pt;
    position: absolute;
    bottom: 5px;
    text-align: center;
    background: #4aaaa5;
    color: white;
    padding-top: 5px;
    padding-bottom: 5px;
}

